--- a/companyEmployees/appsettings.json
+++ b/companyEmployees/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Data Source=LAPTOP-5VC6KBMS;database=CompanyEmployee; User ID=sa;Password=Diya@0517;Integrated Security=true; Encrypt=False"
+    "sqlConnection": "Data Source=LAPTOP-********;database=CompanyEmployee; User ID=sa;Password=*********;Integrated Security=true; Encrypt=False"
   },
   "AllowedHosts": "*"
 }
